# docker-lmelp

./: .cruft.json  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  mkdocs.yml  mongodb.Dockerfile  package.json  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: build-mongo-image.yml  ci.yml  docs.yml
config/: mongod.conf
cron/: backup-cron  mongodb-logrotate.anacron
docs/: .pages  index.md
docs/claude/memory/: 251123-1622-consolidation-mongodb-anacron.md  251125-1430-healthcheck-frontend-endpoint.md  251126-0009-portainer-stack-detachment-fix.md  251126-1443-backend-healthcheck-endpoint.md  251129-2150-integration-calibre.md  260401-1416-service-lmelp-export.md  260706-2344-babelio-cache-externalise.md  260707-0100-issue45-babelio-cache-vide-watchtower.md
docs/dev/: .pages  README.md  mongodb-custom-image.md
docs/user/: .pages  README.md  backup-restore.md  calibre-setup.md  configuration.md  export-android.md  installation.md  mongodb-log-rotation-native.md  mongodb-log-rotation.md  portainer.md
scripts/: backup_mongodb.sh  init_mongo.sh  restore_mongodb.sh  rotate_mongodb_logs.sh
src/scripts/: setup.py
tests/: test_docker_compose.py  test_mongodb_image.py
